Fix formatting of KV namespace ID in wrangler.toml

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ compatibility_date = "2024-01-01"
 # After creating the KV namespace in Cloudflare dashboard,
 # update the 'id' value with your actual namespace ID
 kv_namespaces = [
-  { binding = "GAME_DATA", id = a45ee3d14ce64606adbae48429b9a9af }
+  { binding = "GAME_DATA", id = "a45ee3d14ce64606adbae48429b9a9af" }
 ]
 
 # Environment variables (use Cloudflare dashboard for secrets)
